# Ripple

./: .gitignore  README.md  README_EN.md  install.sh  llm_config.example.yaml  pyproject.toml
deploy/docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
deploy/scripts/: ripple-service-health.sh  ripple-service-publish-dockerhub.sh  ripple-service-start.sh  ripple-service-stop.sh
docs/paper-reviews/: OASIS-open-agent-social-interaction-simulations.md  generative-agents-interactive-simulacra.md
examples/: e2e_ab_test_fmcg_coffee.py  e2e_helpers.py  e2e_pmf_fmcg_algorithm_ecommerce.py  e2e_simulation_cny_robot_xiaohongshu.py  e2e_simulation_xiaohongshu.py  e2e_simulation_xiaohongshu_service.py  e2e_xiaohongshu_common.py
integrations/openclaw/: install_local_skill.sh
ripple/: __init__.py  prompts.py  reporting.py  runtime_paths.py  version.py
ripple/agents/: __init__.py  omniscient.py  sea.py  star.py  tribunal.py
ripple/api/: __init__.py  ensemble.py  simulate.py  variant_isolation.py
ripple/cli/: __init__.py  app.py
ripple/engine/: __init__.py  deliberation.py  recorder.py  runtime.py
ripple/llm/: __init__.py  anthropic_adapter.py  bedrock_adapter.py  chat_completions_adapter.py  config.py  responses_adapter.py  router.py
ripple/primitives/: events.py  models.py  pmf_models.py
ripple/service/: app.py  auth.py  event_bus.py  job_manager.py  job_repo_sqlite.py  llm_config_bootstrap.py  reporting.py  runner.py  settings.py
ripple/skills/: __init__.py  manager.py  (+1 more)
tests/: test_install_script.py  test_runtime_paths.py  test_version.py
(+126 files in other folders)
