[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ripple"
version = "0.2.0"
description = "Ripple: Agent-Native CAS 人类社会行为预测引擎"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
bedrock = [
    "boto3>=1.34",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
include = ["ripple*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
